add slice support for openapi generation
